Deployments/Ingress/api.mentor.gg/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "api-letsencrypt-issuer"


    
    # https://github.com/kubernetes/ingress-nginx/issues/1171
    # https://github.com/kubernetes/ingress-nginx/issues/2535

    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";

spec:
  tls:
  - hosts:
    - api.mentor.gg
    secretName: api-letsencrypt-key
  rules:
  - host: api.mentor.gg
    http:
      paths:
      - path: /
        backend:
          serviceName: mentor-interface
          servicePort: 80
